--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Elm!</title>
     <script src="built/index.js" charset="utf-8"></script>
     <link rel="stylesheet" href="main.css">
+    <meta name="viewport" content="width=500, initial-scale=1">
 </head>
 
 <body>
